# AI-Knowledge-Assistant-RAG-system

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  main.py
backend/api/: __init__.py  deps.py
backend/api/routes/: documents.py  health.py  metrics.py  query.py
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py  eval_quality.py  faithfulness.py  ingestion.py  metrics.py  rag.py  retrieval.py
evals/: RESULTS.md  latest.json  qa.json  run_eval.py
evals/corpus/: acme.txt  helios.txt  northwind.txt
frontend/: app.py
tests/: conftest.py  test_api.py  test_eval_quality.py  test_faithfulness.py  test_ingestion.py  test_metrics.py
