[project]
name = "ai-knowledge-assistant"
version = "0.1.0"
description = "RAG-based AI Knowledge Assistant (FastAPI + Streamlit + Chroma)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "python-multipart>=0.0.9,<1",
    "pydantic-settings>=2.6.0,<3",
    "httpx>=0.27.0,<1",
    "streamlit>=1.40.0,<2",
    "langchain>=0.3.0,<0.4",
    "langchain-core>=0.3.0,<0.4",
    "langchain-openai>=0.2.0,<0.3",
    "langchain-community>=0.3.0,<0.4",
    "langchain-text-splitters>=0.3.0,<0.4",
    "chromadb>=0.5.0,<0.6",
    "pypdf>=5.0.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
